--- a/src/stylesheets/MainTemplate.css
+++ b/src/stylesheets/MainTemplate.css
@@ -5,18 +5,31 @@
 
 .mainTemplate {
     width: 360px;
-    height: 640px;
+    /* height: 640px; */
+    height: 1240px;
     margin-top: 20px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .topbar-wrapper {
+
     height: 60px;
     background-color: #A4C3FF;
     display:flex;
     justify-content: space-between;
     align-items: center;
     text-align: center;
+
+    /* 복붙한거 */
+    background: rgb(255, 255, 255);
+    border: 1px solid rgba(70, 77, 82, 0.082);
+    box-shadow: rgba(0, 0, 0, 0.024) -1px 1px 1px;
+    z-index: -1;
+    padding: 12px;
+    border-radius: 16px;
+    margin-bottom: 18px;
+    /* -- -- */
+
 }
 
 .title {    
@@ -46,10 +59,28 @@
     margin-top: 10px;
 }
 
+
+body {
+    /* rgba(red, green, blue, a */
+    /* rgb에 마지막 값은 투명도 a는 alpha */
+    background: rgba(244, 244, 244, 0.5);
+}
+
 .vd-border {
-    border: 1px solid gray;
+    /* 복붙한거 */
+    background: rgb(255, 255, 255);
+    border: 1px solid rgba(70, 77, 82, 0.082);
+    box-shadow: rgba(0, 0, 0, 0.024) -1px 1px 1px;
+    z-index: -1;
+    padding: 12px;
+    border-radius: 16px;
+    margin-bottom: 18px;
+    /* -- -- */
+
+    width: 100%;
+    /* border: 1px solid gray;
     width: 100px;
-    height: 80px;
+    height: 80px; */
 }
 
 .vdkind {
@@ -61,8 +92,19 @@
 
 .selectedKindExpreesion-wrapper {
     border: 1px solid red;
-    margin-top: 10px;
-    width: 100%;
+    margin: 10px;
+
+    /* 복붙한거 */
+    background: rgb(200, 200, 200);
+    border: 1px solid rgba(70, 77, 82, 0.082);
+    box-shadow: rgba(0, 0, 0, 0.024) -1px 1px 1px;
+    z-index: -1;
+    /* padding: 12px; */
+    border-radius: 16px;
+    margin-bottom: 18px;
+    /* -- -- */
+
+    /* width: 100%; */
     height: 200px;
 }
 
@@ -75,6 +117,16 @@
     justify-content: center;
     align-items: center;
     text-align: center;    
+
+    /* 복붙한거 */
+    background: rgb(255, 255, 255);
+    border: 1px solid rgba(70, 77, 82, 0.082);
+    box-shadow: rgba(0, 0, 0, 0.024) -1px 1px 1px;
+    z-index: -1;
+    padding: 12px;
+    border-radius: 16px;
+    margin-bottom: 18px;
+    /* -- -- */
 }
 
 .comment {
@@ -99,4 +151,15 @@
     justify-content: center;
     align-items: center;
     white-space: nowrap;
+
+    /* 복붙한거 */
+    background: rgb(255, 255, 255);
+    border: 1px solid rgba(70, 77, 82, 0.082);
+    box-shadow: rgba(0, 0, 0, 0.024) -1px 1px 1px;
+    z-index: -1;
+    padding: 12px;
+    border-radius: 16px;
+    margin-bottom: 18px;
+    /* -- -- */
+    
 }
