--- a/src/stylesheets/MainTemplate.css
+++ b/src/stylesheets/MainTemplate.css
@@ -1,3 +1,7 @@
+body, ul, li {
+    list-style: none;
+}
+
 .con {
     margin-left:auto;
     margin-right:auto;
@@ -5,7 +9,7 @@
 
 .mainTemplate {
     width: 360px;
-    height: 1280px;
+    height: 1330px;
     margin-top: 20px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
@@ -17,6 +21,13 @@
     justify-content: space-between;
     align-items: center;
     text-align: center;
+
+    /* 복붙한거 */
+    border: 1px solid rgba(70, 77, 82, 0.082);
+    box-shadow: rgba(0, 0, 0, 0.024) -1px 1px 1px;
+    z-index: -1;
+    padding: 12px;    
+    margin-bottom: 18px;
 }
 
 .title {    
@@ -48,8 +59,17 @@
 
 .vd-border {
     border: 1px solid gray;
-    width: 100px;
+    width: 85px;
     height: 80px;
+
+    /* 복붙한거 */
+    background: rgb(255, 255, 255);
+    border: 1px solid rgba(70, 77, 82, 0.082);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    z-index: -1;
+    padding: 12px;
+    border-radius: 16px;
+    margin-bottom: 18px;
 }
 
 .vdkind {
@@ -70,27 +90,67 @@
 }
 
 .bottomBar {
-    margin-left: -1px;
-    width: 102%;
-    height: 10px;
-    background-color: #c9c9c9;
+    margin-left: -12px;    
+    width: 125%;
+    height: 14px;
+    
     position: relative;
+    border-radius: 16px;
 }
 
 .bottomBar.active::after {
     position: absolute;
     content: '';
-    top: 0;
+    top: 10px;
     left: 0;
     width: 102%;
     height: 10px;
     background-color: inherit;
 }
+/*
+.swiper-slide-active.slide1::after {
+    background-color: red;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 5px;
+    width: 102px;
+    height: 8px;
+}
 
+.swiper-slide-active.slide2::after {
+    background-color: red;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 129px;
+    width: 102px;
+    height: 8px;
+}
+
+.swiper-slide-active.slide3::after {
+    background-color: red;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 253px;
+    width: 102px;
+    height: 8px;
+}
+*/
 .selectedKindExpreesion-wrapper {    
     margin-top: 10px;
     width: 100%;
     height: 240px;
+
+    /* 복붙한거 */
+    background: rgb(200, 200, 200);
+    border: 1px solid rgba(70, 77, 82, 0.082);
+    box-shadow: rgba(0, 0, 0, 0.024) -1px 1px 1px;
+    z-index: -1;
+    /* padding: 12px; */
+    border-radius: 16px;
+    margin-bottom: 18px;
 }
 
 .selectedKindExpreesion-wrapper .swiper-container {
@@ -111,7 +171,7 @@
 }
 
 .selectedKindExpreesion-wrapper .swiper-container .swiper-pagination-bullet-active {
-    background-color: #A4C3FF;
+    background-color: blue;
 }
 
 .selectedKindExpreesion-wrapper .swiper-container .swiper-button-next,
@@ -130,13 +190,22 @@
     justify-content: center;
     align-items: center;
     text-align: center;    
+
+    /* 복붙한거 */
+    /* background: rgb(255, 255, 255); */
+    border: 1px solid rgba(70, 77, 82, 0.082);
+    box-shadow: rgba(0, 0, 0, 0.024) -1px 1px 1px;
+    z-index: -1;
+    padding: 12px;
+    border-radius: 16px;
+    margin-bottom: 18px;
 }
 
 .comment {
     font-weight: 600;
 }
 
-.viewDay-wrapper {
+.viewDay-wrapper, .footer-day {
     height: 20px;
     display: flex;
     justify-content: space-between;    
@@ -154,36 +223,57 @@
     justify-content: center;
     align-items: center;
     white-space: nowrap;
+
+    /* 복붙한거 */
+    background: rgb(255, 255, 255);
+    border: 1px solid rgba(70, 77, 82, 0.082);
+    box-shadow: rgba(0, 0, 0, 0.024) -1px 1px 1px;
+    z-index: -1;
+    padding: 12px;
+    border-radius: 16px;
+    margin-bottom: 18px;
 }
 
-.hexagon-wrapper {
+.chart-wrapper {
     width: 100%;
-    height: 360px;    
-    margin-top: 40px;
+    height: 320px;    
+    margin-top: 65px;
 }
 
-.hexagon_day {
+.chart-day {
     margin-left: 15px;
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
-.hexagon {
+.chart {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 240px;
-    margin-top: 30px;    
+    width: 100%;
+    height: 60%;    
+    margin-top: 40px;    
 }
 
 .footer-wrapper {
     width: 100%;
-    height: 360px;
+    height: 300px;
     background-color: #e9e9e9;
     text-align: center;
 }
 
 .search-box {
-    padding-top: 20px;
+    padding-top: 20px;    
+    position: relative;
+}
+
+.search-box::after {
+    position: absolute;
+    content: '';
+    top: 110%;
+    left: 10%;
+    width: 80%;
+    height: 1px;
+    background-color: black;        
 }
 
 .search-box .box {
@@ -199,4 +289,60 @@
     font-size: 24px;
     vertical-align: middle;
     padding-left: 15px;
+    cursor: pointer;
+}
+
+.footer-day .day {    
+    z-index: 1;
+    height: 16px;
+    margin-top: 10px;
+}
+
+.footer-view24hour {    
+    width: 100%;
+}
+
+.footer-view24hour .fv2h-list {
+    display: flex;
+    width: 100%;
+    margin-top: 50px;
+}
+
+.footer-view24hour .fv2h-name {        
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    position: relative;        
+}
+
+.footer-view24hour .fv2h-name:not(:last-child)::after {
+    position: absolute;
+    content: '';
+    top: 0;
+    right: 30%;
+    width: 1px;
+    height: 150px;
+    background-color: #a9a9a9;
+}
+
+.morning .morning-list {    
+    position: absolute;
+    top: 100%;
+    left: -25px;
+    text-align: center;    
+}
+
+.morning .morning-list .morning-state {
+    font-size: 24px;
+    margin-top: 10px;
+    margin-left: -90%;
+}
+
+.morning .morning-list .morning-viewColor {
+    background-color: red;
+    margin-top: 10px;    
+    margin-left: -43%;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
 }
