--- a/src/stylesheets/MainTemplate.css
+++ b/src/stylesheets/MainTemplate.css
@@ -7,33 +7,39 @@ body, ul, li {
     margin-right:auto;
 }
 
+.card {
+    background: rgb(255, 255, 255);
+    border: 1px solid gray;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    z-index: -1;
+    padding: 12px;
+    border-radius: 16px;
+    margin-bottom: 18px;    
+}
+
+
 .mainTemplate {
     width: 360px;
-    height: 1330px;
+    height: 1030px;
     margin-top: 20px;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    margin-bottom: 50px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);    
 }
 
 .topbar-wrapper {
-    height: 60px;
-    background-color: #A4C3FF;
+    height: 60px;    
     display:flex;
     justify-content: space-between;
     align-items: center;
     text-align: center;
-
-    /* 복붙한거 */
-    border: 1px solid rgba(70, 77, 82, 0.082);
-    box-shadow: rgba(0, 0, 0, 0.024) -1px 1px 1px;
-    z-index: -1;
-    padding: 12px;    
-    margin-bottom: 18px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .title {    
     font-size: 28px;
     font-weight: bold;    
-    cursor: pointer;
+    cursor: pointer;   
 }
 
 .share {
@@ -43,7 +49,7 @@ body, ul, li {
 .share #kakao-link-btn {
     outline: 0;
     border: 0;
-    background-color: #A4C3FF;
+    background-color: white;
 }
 
 .menu {    
@@ -61,18 +67,8 @@ body, ul, li {
 }
 
 .vd-border {
-    border: 1px solid gray;
     width: 85px;
     height: 80px;
-
-    /* 복붙한거 */
-    background: rgb(255, 255, 255);
-    border: 1px solid rgba(70, 77, 82, 0.082);
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-    z-index: -1;
-    padding: 12px;
-    border-radius: 16px;
-    margin-bottom: 18px;
 }
 
 .vdkind {
@@ -145,15 +141,6 @@ body, ul, li {
     margin-top: 10px;
     width: 100%;
     height: 240px;
-
-    /* 복붙한거 */
-    background: rgb(200, 200, 200);
-    border: 1px solid rgba(70, 77, 82, 0.082);
-    box-shadow: rgba(0, 0, 0, 0.024) -1px 1px 1px;
-    z-index: -1;
-    /* padding: 12px; */
-    border-radius: 16px;
-    margin-bottom: 18px;
 }
 
 .selectedKindExpreesion-wrapper .swiper-container {
@@ -186,22 +173,11 @@ body, ul, li {
     margin: 0 5px;
     margin-top: 5px;
     height: 80px;
-    background-color: #c9c9c9;    
-    border: 2px solid gray;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    background-color: #c9c9c9;
     display:flex;
     justify-content: center;
     align-items: center;
     text-align: center;    
-
-    /* 복붙한거 */
-    /* background: rgb(255, 255, 255); */
-    border: 1px solid rgba(70, 77, 82, 0.082);
-    box-shadow: rgba(0, 0, 0, 0.024) -1px 1px 1px;
-    z-index: -1;
-    padding: 12px;
-    border-radius: 16px;
-    margin-bottom: 18px;
 }
 
 .comment {
@@ -216,8 +192,7 @@ body, ul, li {
     margin-top: 10px;    
 }
 
-.day {
-    border: 1px solid gray;
+.day {    
     width: 100px;
     height: 40px;
     text-align: center;
@@ -226,15 +201,7 @@ body, ul, li {
     justify-content: center;
     align-items: center;
     white-space: nowrap;
-
-    /* 복붙한거 */
-    background: rgb(255, 255, 255);
-    border: 1px solid rgba(70, 77, 82, 0.082);
-    box-shadow: rgba(0, 0, 0, 0.024) -1px 1px 1px;
-    z-index: -1;
-    padding: 12px;
-    border-radius: 16px;
-    margin-bottom: 18px;
+    margin: 0 3px;
 }
 
 .chart-wrapper {
