--- a/src/stylesheets/MainTemplate.css
+++ b/src/stylesheets/MainTemplate.css
@@ -91,17 +91,21 @@ body, ul, li {
     text-align: center;
     width: 100%;
     font-weight: 700;  
-    font-size: 14px;  
+    font-size: 16px;  
+
 }
 
 .expression {
+    margin-top: 10px;
+    margin-bottom: 10px;
     width: 100%;
-    height: 40px;
+    text-align: center;
 }
 
 .state {
     width: 100%;
     height: 20px;
+    text-align: center;
 }
 
 .bottomBar {
