--- a/src/stylesheets/MainTemplate.css
+++ b/src/stylesheets/MainTemplate.css
@@ -111,8 +111,7 @@ body, ul, li {
 .bottomBar {
     margin-left: -12px;    
     width: 125%;
-    height: 14px;
-    
+    height: 14px;    
     position: relative;
     border-radius: 16px;
 }
@@ -124,39 +123,39 @@ body, ul, li {
     left: 0;
     width: 102%;
     height: 10px;
-    background-color: inherit;
-}
-/*
-.swiper-slide-active.slide1::after {
     background-color: red;
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 5px;
-    width: 102px;
-    height: 8px;
 }
 
-.swiper-slide-active.slide2::after {
-    background-color: red;
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 129px;
-    width: 102px;
-    height: 8px;
+.bottomBar .muchBad,
+.bottomBar .bad,
+.bottomBar .common,
+.bottomBar .good {
+    margin-left: 10.5%;
+    margin-top: 4%;
+    width: 80%;
+    height: 50%;
 }
 
-.swiper-slide-active.slide3::after {
-    background-color: red;
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 253px;
-    width: 102px;
-    height: 8px;
+.bottomBar .active {
+    width: 100%;
+    height: 100%;
 }
-*/
+
+.bottomBar .muchBad .active {
+    background-color: red;
+}
+
+.bottomBar .bad .active {
+    background-color: orange;
+}
+
+.bottomBar .common .active {
+    background-color: green;
+}
+
+.bottomBar .good .active {
+    background-color: blue;
+}
 
 /* 까마귀 이미지 나오는 곳  */
 
