--- a/src/stylesheets/MainTemplate.css
+++ b/src/stylesheets/MainTemplate.css
@@ -35,7 +35,7 @@ body, ul, li {
 
 .mainTemplate {
     width: 360px;
-    height: 1030px;
+    height: 1100px;
     margin-top: 20px;
     margin-bottom: 50px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -245,6 +245,18 @@ body, ul, li {
     width: 100%;
     height: 60%;    
     margin-top: 40px;    
+}
+
+.chart .visible {
+    opacity: 1;
+}
+
+.chart .hidden {
+    opacity: 0;
+}
+
+.chart-wrapper .chart g g:nth-child(2){
+    opacity: 0;
 }
 
 /* 하단부분 */
