--- a/src/stylesheets/MainTemplate.css
+++ b/src/stylesheets/MainTemplate.css
@@ -163,6 +163,7 @@ body, ul, li {
     margin-top: 10px;
     width: 100%;
     height: 360px;
+    position: relative;
 }
 
 .selectedKindExpreesion-wrapper .swiper-container {
@@ -189,6 +190,10 @@ body, ul, li {
 .selectedKindExpreesion-wrapper .swiper-container .swiper-button-next,
 .selectedKindExpreesion-wrapper .swiper-container .swiper-button-prev {
     --swiper-navigation-size: 24px;
+}
+
+.selectedKindExpreesion-wrapper .commonState {
+    background-color: red;
 }
 
 /* 코멘트 나오는 곳 */
