--- a/src/stylesheets/MainTemplate.css
+++ b/src/stylesheets/MainTemplate.css
@@ -358,3 +358,8 @@ body, ul, li {
     height: 50px;
     border-radius: 50%;
 }
+
+.page-wrapper {
+    /* border: 1px solid red; */
+    height: 100vh;
+}
