--- a/src/stylesheets/MainTemplate.css
+++ b/src/stylesheets/MainTemplate.css
@@ -1,7 +1,11 @@
 /* 기본설정 */
 
+html {
+    width: 100%;
+}
+
 body, ul, li {
-    list-style: none;
+    list-style: none;    
 }
 
 /* 라이브러리 */
@@ -34,8 +38,8 @@ body, ul, li {
 /* 탑바 */
 
 .mainTemplate {
-    width: 360px;
-    height: 1100px;
+    width: 100%;
+    height: auto;
     margin-top: 20px;
     margin-bottom: 50px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -43,7 +47,7 @@ body, ul, li {
 
 .topbar-wrapper {
     width: 100%;
-    height: 60px;
+    height: 5%;
     display:flex;
     justify-content: space-between;
     align-items: center;
@@ -162,13 +166,12 @@ body, ul, li {
 .selectedKindExpreesion-wrapper {    
     margin-top: 10px;
     width: 100%;
-    height: 360px;
-    position: relative;
+    height: 33%;
 }
 
 .selectedKindExpreesion-wrapper .swiper-container {
     width: 100%;
-    height: 360px;
+    height: 100%;
 }
 
 .selectedKindExpreesion-wrapper .swiper-container .swiper-button-prev.swiper-button-disabled,
@@ -192,22 +195,18 @@ body, ul, li {
     --swiper-navigation-size: 24px;
 }
 
-.selectedKindExpreesion-wrapper .commonState {
-    background-color: red;
-}
-
 /* 코멘트 나오는 곳 */
 
 .comment-wrapper {    
     margin: 15px 0;
-    height: 80px;
+    height: 3%;
     background-color: #e9e9e9;
 }
 
 /* 하단 날짜 보여주는 곳 */
 
 .viewDay-wrapper, .footer-day {
-    height: 20px;
+    height: 3%;
     display: flex;
     justify-content: space-between;    
     margin-top: 10px;
@@ -234,7 +233,7 @@ body, ul, li {
 
 .chart-wrapper {
     width: 100%;
-    height: 320px;    
+    height: 30%;
     margin-top: 65px;
 }
 
